# suskind-knowledge-graph

./: .gitignore  .graphdb_history  README.md  ai_integration.py  cli_concept.py  main.py  pyproject.toml  script.txt  sk_cli.py  skcomponents.py  test_cli.py
______literacy_ressources/: JesusGMaestroVideos.txt  Talk With Strangers.txt  en.txt  expositas.txt  kerouac ressources.docx  zby person.txt
______literacy_ressources/+/: breve historai de rusia.docx  classical_occidental_music.docx
examples/: gct2.py  gct3.py  gpt_cmd_test.py  main.py
gateway/: main.py
launchpads/: repair_accents.py  repair_examples.py  sort_file.py
mounted/litexplorer/: literature_explorer.py  main.py  pdf2txt.py
sec_copy/script/: script_20240825_152927.txt  script_20240826_044420.txt  script_20240826_111736.txt  script_20240826_111809.txt  script_20240826_112151.txt  script_20240826_112544.txt  script_20240826_112720.txt  script_20240826_112813.txt  script_20240826_120818.txt  script_20240826_121158.txt  script_20240826_121453.txt  script_20240826_121858.txt  script_20240826_121919.txt  script_20240826_122002.txt  script_20240826_122112.txt  script_20240826_122437.txt  script_20240826_123150.txt  script_20240826_123249.txt  script_20240826_123457.txt  script_20240826_124246.txt  script_20240826_124646.txt  script_20240826_124931.txt  script_20240826_130746.txt  script_20240826_160930.txt  script_20240826_161806.txt  script_20240826_164332.txt  script_20240826_164854.txt  script_20240826_170533.txt  script_20240826_171027.txt  (+13 more)
src/: sktools.py
src/cli/: sk_cli.py
tests/: test.py
(+3656 files in other folders)
